src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP023_UP023.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    RewriteCElementTree: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 59
  fix:
    content: "from xml.etree.ElementTree import XML, Element, SubElement"
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 59
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 3
    column: 7
  end_location:
    row: 3
    column: 35
  fix:
    content: xml.etree.ElementTree as ET
    location:
      row: 3
      column: 7
    end_location:
      row: 3
      column: 35
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 44
  fix:
    content: from   xml.etree.ElementTree    import  XML
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 44
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 7
    column: 10
  end_location:
    row: 7
    column: 49
  fix:
    content: xml.etree.ElementTree       as      ET
    location:
      row: 7
      column: 10
    end_location:
      row: 7
      column: 49
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 14
    column: 1
  fix:
    content: "from xml.etree.ElementTree import (\n    XML,\n    Element,\n    SubElement,\n)"
    location:
      row: 10
      column: 0
    end_location:
      row: 14
      column: 1
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 16
    column: 11
  end_location:
    row: 16
    column: 39
  fix:
    content: xml.etree.ElementTree as ET
    location:
      row: 16
      column: 11
    end_location:
      row: 16
      column: 39
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 17
    column: 26
  end_location:
    row: 17
    column: 45
  fix:
    content: ElementTree as CET
    location:
      row: 17
      column: 26
    end_location:
      row: 17
      column: 45
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 19
    column: 22
  end_location:
    row: 19
    column: 40
  fix:
    content: ElementTree as ET
    location:
      row: 19
      column: 22
    end_location:
      row: 19
      column: 40
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 21
    column: 19
  end_location:
    row: 21
    column: 47
  fix:
    content: xml.etree.ElementTree as ET
    location:
      row: 21
      column: 19
    end_location:
      row: 21
      column: 47
  parent: ~
- kind:
    RewriteCElementTree: ~
  location:
    row: 24
    column: 31
  end_location:
    row: 24
    column: 59
  fix:
    content: xml.etree.ElementTree as ET
    location:
      row: 24
      column: 31
    end_location:
      row: 24
      column: 59
  parent: ~

