src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP024_UP024_0.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    OSErrorAlias: EnvironmentError
  location:
    row: 6
    column: 7
  end_location:
    row: 6
    column: 23
  fix:
    content: OSError
    location:
      row: 6
      column: 7
    end_location:
      row: 6
      column: 23
  parent: ~
- kind:
    OSErrorAlias: IOError
  location:
    row: 11
    column: 7
  end_location:
    row: 11
    column: 14
  fix:
    content: OSError
    location:
      row: 11
      column: 7
    end_location:
      row: 11
      column: 14
  parent: ~
- kind:
    OSErrorAlias: WindowsError
  location:
    row: 16
    column: 7
  end_location:
    row: 16
    column: 19
  fix:
    content: OSError
    location:
      row: 16
      column: 7
    end_location:
      row: 16
      column: 19
  parent: ~
- kind:
    OSErrorAlias: mmap.error
  location:
    row: 21
    column: 7
  end_location:
    row: 21
    column: 17
  fix:
    content: OSError
    location:
      row: 21
      column: 7
    end_location:
      row: 21
      column: 17
  parent: ~
- kind:
    OSErrorAlias: select.error
  location:
    row: 26
    column: 7
  end_location:
    row: 26
    column: 19
  fix:
    content: OSError
    location:
      row: 26
      column: 7
    end_location:
      row: 26
      column: 19
  parent: ~
- kind:
    OSErrorAlias: socket.error
  location:
    row: 31
    column: 7
  end_location:
    row: 31
    column: 19
  fix:
    content: OSError
    location:
      row: 31
      column: 7
    end_location:
      row: 31
      column: 19
  parent: ~
- kind:
    OSErrorAlias: error
  location:
    row: 36
    column: 7
  end_location:
    row: 36
    column: 12
  fix:
    content: OSError
    location:
      row: 36
      column: 7
    end_location:
      row: 36
      column: 12
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 43
    column: 7
  end_location:
    row: 43
    column: 17
  fix:
    content: OSError
    location:
      row: 43
      column: 7
    end_location:
      row: 43
      column: 17
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 47
    column: 7
  end_location:
    row: 47
    column: 20
  fix:
    content: OSError
    location:
      row: 47
      column: 7
    end_location:
      row: 47
      column: 20
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 51
    column: 7
  end_location:
    row: 51
    column: 57
  fix:
    content: OSError
    location:
      row: 51
      column: 7
    end_location:
      row: 51
      column: 57
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 58
    column: 7
  end_location:
    row: 58
    column: 35
  fix:
    content: "(OSError, KeyError)"
    location:
      row: 58
      column: 7
    end_location:
      row: 58
      column: 35
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 65
    column: 7
  end_location:
    row: 65
    column: 23
  fix:
    content: "(OSError, error)"
    location:
      row: 65
      column: 7
    end_location:
      row: 65
      column: 23
  parent: ~
- kind:
    OSErrorAlias: mmap.error
  location:
    row: 87
    column: 7
  end_location:
    row: 87
    column: 19
  fix:
    content: OSError
    location:
      row: 87
      column: 7
    end_location:
      row: 87
      column: 19
  parent: ~

