src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP024_UP024_1.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    OSErrorAlias: ~
  location:
    row: 5
    column: 7
  end_location:
    row: 5
    column: 37
  fix:
    content: OSError
    location:
      row: 5
      column: 7
    end_location:
      row: 5
      column: 37
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 7
    column: 7
  end_location:
    row: 7
    column: 40
  fix:
    content: "(OSError, KeyError)"
    location:
      row: 7
      column: 7
    end_location:
      row: 7
      column: 40
  parent: ~
- kind:
    OSErrorAlias: ~
  location:
    row: 12
    column: 7
  end_location:
    row: 16
    column: 1
  fix:
    content: OSError
    location:
      row: 12
      column: 7
    end_location:
      row: 16
      column: 1
  parent: ~

