src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP027_UP027.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    RewriteListComprehension: ~
  location:
    row: 2
    column: 16
  end_location:
    row: 2
    column: 38
  fix:
    content: (fn(x) for x in items)
    location:
      row: 2
      column: 16
    end_location:
      row: 2
      column: 38
  parent: ~
- kind:
    RewriteListComprehension: ~
  location:
    row: 4
    column: 15
  end_location:
    row: 4
    column: 37
  fix:
    content: (fn(x) for x in items)
    location:
      row: 4
      column: 15
    end_location:
      row: 4
      column: 37
  parent: ~
- kind:
    RewriteListComprehension: ~
  location:
    row: 6
    column: 25
  end_location:
    row: 6
    column: 47
  fix:
    content: (fn(x) for x in items)
    location:
      row: 6
      column: 25
    end_location:
      row: 6
      column: 47
  parent: ~
- kind:
    RewriteListComprehension: ~
  location:
    row: 8
    column: 16
  end_location:
    row: 8
    column: 51
  fix:
    content: "([i for i in fn(x)] for x in items)"
    location:
      row: 8
      column: 16
    end_location:
      row: 8
      column: 51
  parent: ~
- kind:
    RewriteListComprehension: ~
  location:
    row: 10
    column: 16
  end_location:
    row: 13
    column: 1
  fix:
    content: "(\n    fn(x)\n    for x in items\n)"
    location:
      row: 10
      column: 16
    end_location:
      row: 13
      column: 1
  parent: ~

