src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP030_UP030_0.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    FormatLiterals: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 33
  fix:
    content: "\"{}\" \"{}\" \"{}\".format(1, 2, 3)"
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 33
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 1
  fix:
    content: "\"a {} complicated {} string with {} {}\".format(\n    \"fourth\", \"second\", \"first\", \"third\"\n)"
    location:
      row: 5
      column: 0
    end_location:
      row: 7
      column: 1
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 15
  fix:
    content: "'{}'.format(1)"
    location:
      row: 9
      column: 0
    end_location:
      row: 9
      column: 15
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 18
  fix:
    content: "'{:x}'.format(30)"
    location:
      row: 11
      column: 0
    end_location:
      row: 11
      column: 18
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 13
    column: 4
  end_location:
    row: 13
    column: 19
  fix:
    content: "'{}'.format(1)"
    location:
      row: 13
      column: 4
    end_location:
      row: 13
      column: 19
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 29
  fix:
    content: "'''{}\\n{}\\n'''.format(1, 2)"
    location:
      row: 15
      column: 0
    end_location:
      row: 15
      column: 29
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 17
    column: 4
  end_location:
    row: 18
    column: 26
  fix:
    content: "\"foo {}\" \\\n    \"bar {}\".format(1, 2)"
    location:
      row: 17
      column: 4
    end_location:
      row: 18
      column: 26
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 17
  fix:
    content: "(\"{}\").format(1)"
    location:
      row: 20
      column: 0
    end_location:
      row: 20
      column: 17
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 22
    column: 0
  end_location:
    row: 22
    column: 27
  fix:
    content: "\"\\N{snowman} {}\".format(1)"
    location:
      row: 22
      column: 0
    end_location:
      row: 22
      column: 27
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 18
  fix: ~
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 29
    column: 4
  end_location:
    row: 30
    column: 25
  fix: ~
  parent: ~
- kind:
    FormatLiterals: ~
  location:
    row: 34
    column: 4
  end_location:
    row: 35
    column: 25
  fix: ~
  parent: ~

