src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP031_UP031_0.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    PrintfStringFormatting: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 16
  fix:
    content: "'{} {}'.format(a, b)"
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 16
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 14
  fix:
    content: "\"trivial\".format()"
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 14
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 18
  fix:
    content: "\"{}\".format(\"simple\")"
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 18
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 28
  fix:
    content: "\"{}\".format(\"%s\" % (\"nested\",))"
    location:
      row: 8
      column: 0
    end_location:
      row: 8
      column: 28
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 8
    column: 8
  end_location:
    row: 8
    column: 26
  fix:
    content: "\"{}\".format(\"nested\")"
    location:
      row: 8
      column: 8
    end_location:
      row: 8
      column: 26
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 22
  fix:
    content: "\"{}% percent\".format(15)"
    location:
      row: 10
      column: 0
    end_location:
      row: 10
      column: 22
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 12
  fix:
    content: "\"{:f}\".format(15)"
    location:
      row: 12
      column: 0
    end_location:
      row: 12
      column: 12
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 13
  fix:
    content: "\"{:.f}\".format(15)"
    location:
      row: 14
      column: 0
    end_location:
      row: 14
      column: 13
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 14
  fix:
    content: "\"{:.3f}\".format(15)"
    location:
      row: 16
      column: 0
    end_location:
      row: 16
      column: 14
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 13
  fix:
    content: "\"{:3f}\".format(15)"
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 13
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 13
  fix:
    content: "\"{:<5f}\".format(5)"
    location:
      row: 20
      column: 0
    end_location:
      row: 20
      column: 13
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 22
    column: 0
  end_location:
    row: 22
    column: 12
  fix:
    content: "\"{:9f}\".format(5)"
    location:
      row: 22
      column: 0
    end_location:
      row: 22
      column: 12
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 20
  fix:
    content: "\"brace {{}} {}\".format(1)"
    location:
      row: 24
      column: 0
    end_location:
      row: 24
      column: 20
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 26
    column: 0
  end_location:
    row: 28
    column: 9
  fix:
    content: "\"{}\".format(\n    \"trailing comma\",\n        )"
    location:
      row: 26
      column: 0
    end_location:
      row: 28
      column: 9
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 31
    column: 4
  end_location:
    row: 32
    column: 21
  fix:
    content: "\"foo {} \"\n    \"bar {}\".format(x, y)"
    location:
      row: 31
      column: 4
    end_location:
      row: 32
      column: 21
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 35
    column: 6
  end_location:
    row: 35
    column: 22
  fix:
    content: "\"foo {} \".format(x)"
    location:
      row: 35
      column: 6
    end_location:
      row: 35
      column: 22
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 37
    column: 15
  end_location:
    row: 40
    column: 10
  fix:
    content: "(\n    \"foo {} \"\n    \"bar {}\"\n).format(x, y)"
    location:
      row: 37
      column: 15
    end_location:
      row: 40
      column: 10
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 43
    column: 0
  end_location:
    row: 43
    column: 23
  fix:
    content: "\"{} \\N{{snowman}}\".format(a)"
    location:
      row: 43
      column: 0
    end_location:
      row: 43
      column: 23
  parent: ~
- kind:
    PrintfStringFormatting: ~
  location:
    row: 58
    column: 0
  end_location:
    row: 58
    column: 10
  fix:
    content: ".format()"
    location:
      row: 58
      column: 0
    end_location:
      row: 58
      column: 10
  parent: ~

